--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
+
+    "strictNullChecks":false,
+    "strictPropertyInitialization": false,
+
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
